Fixing nav spacing

--- a/src/navbar.css
+++ b/src/navbar.css
@@ -5,7 +5,6 @@
   
 .navbar-brand {
     color: #fff !important;
-    margin-left: -35px;
     font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     font-weight: 500;
     font-style: normal;
